--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -172,6 +172,86 @@
                             	<img src="../imagenes/esculturas/IMG_20210518_213043.jpg" class="rounded " width="304" height="236">
                             </a>	
                         </div>
+			 <div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/amongcuchillo.jpgg">
+                            	<img src="../imagenes/esculturas/amongcuchillo.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div> 
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/amongus.jpgg">
+                            	<img src="../imagenes/esculturas/amongus.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/amongusmancharoja.jpgg">
+                            	<img src="../imagenes/esculturas/amongusmancharoja.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>   
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/chicopaz.jpg">
+                            	<img src="../imagenes/esculturas/chicopaz.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>  
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/criaturadientes.jpg">
+                            	<img src="../imagenes/esculturas/criaturadientes.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/cuellolargo.jpg">
+                            	<img src="../imagenes/esculturas/cuellolargo.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/digimon.jpg">
+                            	<img src="../imagenes/esculturas/digimon.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/islaminiatura.jpg">
+                            	<img src="../imagenes/esculturas/islaminiatura.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div> 
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/nesu.jpg">
+                            	<img src="../imagenes/esculturas/nesu.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/osoverde.jpg">
+                            	<img src="../imagenes/esculturas/osoverde.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/panteranegra.jpg">
+                            	<img src="../imagenes/esculturas/panteranegra.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/plantasmini.jpg">
+                            	<img src="../imagenes/esculturas/plantasmini.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/plantaszombies.jpg">
+                            	<img src="../imagenes/esculturas/plantaszombies.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div> 
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/raptor.jpg">
+                            	<img src="../imagenes/esculturas/raptor.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>  
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/rex.jpg">
+                            	<img src="../imagenes/esculturas/rex.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/unicornio.jpg">
+                            	<img src="../imagenes/esculturas/unicornio.jpg" class="rounded " width="304" height="236">
+                            </a>	
+                        </div>     
                     </div>
                 </div>
             </div>
