--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -120,6 +120,21 @@
                             	<img src="../imagenes/dibujos/dibujo7.jpg" class="rounded" width="304" height="236">
                             </a>	
                         </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujos/dibujo8.jpg">
+                            	<img src="../imagenes/dibujos/dibujo8.jpg" class="rounded" width="304" height="236">
+                            </a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujos/dibujo9.jpg">
+                            	<img src="../imagenes/dibujos/dibujo9.jpg" class="rounded" width="304" height="236">
+                            </a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujos/dibujo10.jpg">
+                            	<img src="../imagenes/dibujos/dibujo10.jpg" class="rounded" width="304" height="236">
+                            </a>	
+                        </div>
                     </div>
                 </div>
             </div>
