--- a/paginas/dibujosDigitales.html
+++ b/paginas/dibujosDigitales.html
@@ -100,6 +100,21 @@
                            		<img src="../imagenes/dibujosdigitales/dibujodigital4.jpg" class="rounded" width="304" height="236">
                            	</a>	
                         </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital5.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital5.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital6.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital6.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital7.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital7.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
                     </div>
                 </div>
             </div>
