--- a/paginas/dibujosDigitales.html
+++ b/paginas/dibujosDigitales.html
@@ -115,6 +115,36 @@
                            		<img src="../imagenes/dibujosdigitales/dibujodigital7.jpg" class="rounded" width="304" height="236">
                            	</a>	
                         </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital8.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital8.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital9.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital8.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital9.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital9.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital10.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital10.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital11.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital11.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
+                        <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujosdigitales/dibujodigital12.jpg">
+                           		<img src="../imagenes/dibujosdigitales/dibujodigital12.jpg" class="rounded" width="304" height="236">
+                           	</a>	
+                        </div>
                     </div>
                 </div>
             </div>
