--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -251,6 +251,11 @@
                             <a href="../imagenes/esculturas/unicornio.jpg">
                             	<img src="../imagenes/esculturas/unicornio.jpg" class="rounded " width="304" height="236">
                             </a>	
+                        </div>    
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/inosuke.jpg">
+                            	<img src="../imagenes/esculturas/inosuke.jpg" class="rounded " width="304" height="236">
+                            </a>	
                         </div>     
                     </div>
                 </div>
